package de.darthkali.hexagonal.adapter.`in`

class PizzaController {
}