package de.darthkali.hexagonal.adapter.out

class PostgresPizzaRepository {
}