package de.darthkali.hexagonal.application.port.`in`

interface OrderPizzaUseCase {
}