package de.darthkali.hexagonal.application.services

class CancelOrderService {
}